crates/crucible-tui/src/snapshots/crucible_tui__panel__tests__headed@40.snap
---
source: crates/crucible-tui/src/panel.rs
assertion_line: 1019
expression: "picture(&headed.rows(columns, Glyphs::Unicode), columns)"
---
<Accent>────────────────────────────────────────</>

<Strong>Log in</>

Choose the account or key to sign in
with.

<Strong>Subscription</>

<Accent>›</> <Strong>Kimi Code · kimi.ai</>
  <Quiet>Kimi Code plan usage, accounts outsid…</>

  Kimi Code · kimi.com
  <Quiet>Kimi Code plan usage, mainland China …</>

<Strong>API key</>

  MoonshotAI · kimi.com
  <Quiet>set MOONSHOT_API_KEY</>

<Quiet>esc to cancel</>
