crates/crucible-tui/src/snapshots/crucible_tui__panel__tests__login@80.snap
---
source: crates/crucible-tui/src/panel.rs
expression: "picture(&panel.rows(columns, glyphs), columns)"
---
<Accent>────────────────────────────────────────────────────────────────────────────────</>

<Strong>Log in</>

Choose the provider whose API key you have. The key is typed into a box that
does not echo it, and signs requests from the next turn on.

<Accent>›</> <Strong>Anthropic</>
  <Quiet>typed here, or set in ANTHROPIC_API_KEY</>

  MoonshotAI
  <Quiet>typed here, or set in MOONSHOT_API_KEY</>

  OpenAI
  <Quiet>typed here, or set in OPENAI_API_KEY</>

<Quiet>esc to cancel</>
