crates/crucible-tui/src/snapshots/crucible_tui__panel__tests__narrow@34.snap
---
source: crates/crucible-tui/src/panel.rs
assertion_line: 243
expression: "dump(&panel.rows(columns, glyphs), columns)"
---
<Accent>──────────────────────────────────</>
                                  
<Strong>Log in</>                            
                                  
Select a provider to use crucible 
as part of your subscription plan,
or billed based on API usage      
through your Console account.     
                                  
<Accent>›</> <Strong>Anthropic</>                       
  <Quiet>Console API key, billed by usage</>
                                  
  MoonshotAI                      
  <Quiet>Kimi Code plan, or a Platform k…</>
                                  
  OpenAI                          
  <Quiet>Console API key, billed by usage</>
                                  
<Quiet>esc to cancel</>
