crates/crucible-tui/src/snapshots/crucible_tui__panel__tests__second@80.snap
---
source: crates/crucible-tui/src/panel.rs
expression: "picture(&panel.rows(columns, glyphs), columns)"
---
<Accent>────────────────────────────────────────────────────────────────────────────────</>

<Strong>Log in</>

Choose the provider whose API key you have.

  Anthropic
  <Quiet>set ANTHROPIC_API_KEY</>

<Accent>›</> <Strong>MoonshotAI</>
  <Quiet>set MOONSHOT_API_KEY</>

  OpenAI
  <Quiet>set OPENAI_API_KEY</>

<Quiet>esc to cancel</>
